test/bad/functions/args03.px

func f(x: Int = true) def
    return

f()
